gcc/testsuite/g++.dg/cpp0x/constexpr-main.C
// { dg-do compile { target c++11 } }

constexpr int main ();  // { dg-error "constexpr" }
